# WOMD_Scenario_Extraction

./: README.md
waym_osc_matcher/: Dockerfile  (+2 more)
waymo_osc_extractor/: Dockerfile  Dockerfile.Builder  Extractor_Manual.md  README.md  kube_runner.py  plot_full_scene.py  plot_map_data.py  plotlanes.py  pyproject.toml  requirements.txt  seg_0.xodr  waymo_job.yaml  xodr_exporter.py
waymo_osc_extractor/features/: access_bucket.feature  access_scenarios.feature
waymo_osc_extractor/waymo_osc_extractor/: create_perf-report.sh  process.py  s3_scenario_accessor.py  s3_tfrecord_accessor.py  scenario_processor.py  scenario_processor2.py
waymo_osc_extractor/waymo_osc_extractor/carla_exporter/: segment_to_opendrive.py
waymo_osc_extractor/waymo_osc_extractor/eval/: evaluate_ttc_closeness.py  per_actor.json  per_actor_compare_longv_sdot.py  wsc_vs_woe_to_json.py
waymo_osc_extractor/waymo_osc_extractor/helpers/: condense_actors.py  data_stichting.py  matching.py  plot_matches.py
waymo_osc_extractor/waymo_osc_extractor/scenario_handling/: lane_graph.py  scenario.py
waymo_osc_extractor/waymo_osc_extractor/waymo_scenario_tools/: .gitignore  README.md  __init__.py  main.py  requirements.txt
waymo_osc_extractor/waymo_osc_extractor/waymo_scenario_tools/s3_handlers/: __init__.py  s3_pb_scenario_streamer.py  s3_tfrecord_streamer.py
waymo_osc_extractor/waymo_osc_extractor/waymo_scenario_tools/scenario_handling/: __init__.py  lane_graph.py  scenario.py  segment_polygon_handling.py
waymo_osc_extractor/waymo_osc_extractor/waymo_scenario_tools/tests/: caluculate_neighbor_errors.py  (+2 more)
(+6 files in other folders)
